2010-12-20  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java:
	  Das Drucken von Probenahmeaufträgen und Gebührenbescheiden erhöht nun
	  automatisch den Status der aktuellen Probenahme.

2010-12-20  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java:
	  Knopf zum manuellen Erhöhen des Vorgangsstatus von Probenahmen
	  integriert. Die Funktionalität ist jedoch noch nicht implementiert -
	  hier wurde erstmal nur die GUI erweitert.

2010-12-20  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java:
	  Felder in der Probenahmeauftrag-Oberfläche bzgl des Betriebs angepasst:
	  der Name des Betriebs ist nicht mehr editierbar und enthält den Names
	  sowie die Adresse des Betriebes. Das Feld `Entnahmepunkt` zeigt die
	  Beschreibung des Entnahmepunktes.

2010-12-17  Ingo Weinzierl <ingo@intevation.de>

	* reports/gebuehrenbescheid.jrxml: Verbesserungen am Template (Platz
	  zwischen Elementen zueinander).

2010-12-17  Ingo Weinzierl <ingo@intevation.de>

	* build.xml: Es gibt nun zwei unterschiedliche Clean-Tasks.
	  clean:    Löscht das `build` und `dist` Verzeichnis sowie die übersetzten
	            JasperReports Templates.
	  cleanall: Löscht `build`, `dist`, die übersetzten Tempaltes und auch das
	            `doc` Verzeichnis.

2010-12-17  Ingo Weinzierl <ingo@intevation.de>

	* reports/gebuehrenbescheid.jrxml: Der erste Entwurf eines
	  Gebührenbescheid-Templates. Hier müssen/sollten noch ein paar Anpassungen
	  gemacht werden (Schriftgröße, Abstand von Feldern zueinander, etc).

	* src/de/bielefeld/umweltamt/aui/icons/gebuehrenbescheid-icon.jpg: Dieses
	  Icon wird vom Gebührenbescheid referenziert.

	* lib/groovy-all-1.7.5.jar: Beim Übersetzen des Gebührenbescheides wird
	  diese Lib benötigt (Abhängigkeit von JasperReports).

2010-12-17  Ingo Weinzierl <ingo@intevation.de>
